# nge2

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  build.py  buildconfig.json  conanfile.txt
.github/workflows/: cmake.yml
buildscripts/: build.bat  clean.bat  configure.bat  configure.sh  run.bat
resources/MiningState/: treasure.json
src/: main.cpp
src/Framework/Components/: AnimatedSprite.cpp  AnimatedSprite.h  Button.cpp  Button.h  CMakeLists.txt  Sprite.cpp  Sprite.h  Switch.cpp  Switch.h  Text.cpp  Text.h
src/Framework/Components/Utility/: AnimationState.cpp  AnimationState.h  SimpleDrawableBase.cpp  SimpleDrawableBase.h
src/Framework/Core/: Audio.cpp  Audio.h  CMakeLists.txt  Game.cpp  Game.h  Game.hpp  Graphics.cpp  Graphics.h  Input.cpp  Input.h  State.cpp  State.h  State.hpp  StateManager.cpp  StateManager.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h
src/Framework/Core/GraphicsInterfaces/: Drawable.h  Rotatable.h
src/Framework/Core/InputInterfaces/: Clickable.h
src/Framework/Core/Interfaces/: Clickable.h  Drawable.h  Listenable.hpp  Rotatable.h  Translatable.h
src/Framework/Core/Utility/: SDL_EventExtensions.cpp  SDL_EventExtensions.h  SDL_PointExtensions.cpp  SDL_PointExtensions.h  SDL_RectExtensions.cpp  SDL_RectExtensions.h
src/Game/: CMakeLists.txt  InitialState.cpp  InitialState.h  SampleState.cpp  SampleState.h
src/Game/InitialState/: InitialState.cpp  InitialState.h
src/Game/MiningState/: MiningState.cpp  MiningState.h  Treasure.cpp  Treasure.h
src/Game/OverworldState/: OverworldState.cpp  OverworldState.h  Tilemap.cpp  Tilemap.h  Tileset.cpp  Tileset.h
src/Tests/: CMakeLists.txt  SDL_RectExtensionsTests.cpp  SDL_RectExtensionsTests.h  testing.h  tests.cpp
