add_library(
    Core
    ./Game.cpp
    ./Timer.cpp
    ./Graphics.cpp
    ./Input.cpp
    ./State.cpp
    ./StateManager.cpp
    ./Audio.cpp
    ./Utility/SDL_RectExtensions.cpp
    ./Utility/SDL_PointExtensions.cpp
    ./Utility/SDL_EventExtensions.cpp
)

if (MINGW)
    target_link_libraries(
        Core
        mingw32
        SDL2::SDL2main
        sdl_image::sdl_image
        SDL2_ttf::SDL2_ttf
        nlohmann_json::nlohmann_json
    )
else()
    target_link_libraries(
        Core
        SDL2::SDL2main
        sdl_image::sdl_image
        SDL2_ttf::SDL2_ttf
        nlohmann_json::nlohmann_json
    )
endif()